# rust-synth

./: Cargo.toml  LICENSE  README.md  nanokontrol2.toml  noisetoaster-nanokontrol2.toml  rack1-nanokontrol2.toml
benches/: bench.rs
src/: config.rs  input.rs  lib.rs  macros.rs  main.rs  midi_message.rs  module.rs  util.rs
