[package]
name = "rustsynth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
cpal = "0.13.4"
midir = "0.7.0"
rand = "0.8.4"
toml = "0.5.8"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "bench"
harness = false
